# RIDanmaku

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup_env.bat
assets/FSW/: 3rdparty-licenses.txt
assets/FSW/dan/: bha.i  bha_bs.i  bha_mbs.i  danmaku.i  st01.i  st02.i  st02bs.i  st02mbs.i  st03bs.i  test.i  test_sastg2.i
assets/FSW/danbg/: bha.i  sdm.i  st02.i
assets/FSW/danpl/: pl00a.i  player.i  reimu.i
assets/FSW/dlg/: en00.i
assets/FSW/dvm/: ascii.i  bha.i  dan_eff.i  dan_enemy.i  dan_reimu.i  dan_ui.i  danbg_sdm.i  menu.i  menu_main.i  menu_pause.i  st02.i
scripts/dan/: danmaku.i  st01.i  st02.i
scripts/danbg/: bg.i
scripts/danpl/: pl00b.i
scripts/dlg/: dialog.i
scripts/dvm/: danpl_rin.i  dialog.i  dvm.i  menu.i  menu_main.i  menu_pause.i  menu_score.i  menu_settings.i
src/: CMakeLists.txt  bg.c  bg.h  boss.c  boss.h  bullet.c  bullet.h  bulletmgr.c  bulletmgr.h  danmaku.c  danmaku.h  dialog.c  dialog.h  enemy.c  enemy.h  items.c  items.h  keymap.c  keymap.h  laser.c  laser.h  loading.c  loading.h  menu.c  menu.h  menumain.c  menupause.c  menureplay.c  menusettings.c  player.c  player.h  redefined.c  redefined.h  replay.c  replay.h  score.c  score.h
